--- a/src/pages/ArtboardsPage.module.css
+++ b/src/pages/ArtboardsPage.module.css
@@ -98,6 +98,11 @@
   min-height: 0;
 }
 
+.bentoCardFocused {
+  outline: 2px solid var(--accent);
+  outline-offset: 2px;
+}
+
 .bentoLink {
   display: flex;
   flex-direction: column;
@@ -106,6 +111,16 @@
   text-decoration: none;
   color: inherit;
   min-width: 0;
+}
+
+button.bentoLink {
+  width: 100%;
+  cursor: pointer;
+  background: none;
+  border: none;
+  padding: 0;
+  text-align: left;
+  font: inherit;
 }
 
 .bentoLink:hover .bentoName {
